cleaned up some shit i think. also almost fixed issue with navbars that makes them appear slightly off-center towards the right.

--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ ul {
     list-style-type: none;
     margin: 0px;
     padding-bottom: 15px;
+    padding-left: 0px;
 }
 
 #nav {
